more decoding optimisations

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -19,3 +19,10 @@ path = "fuzz_targets/pixel_mapping.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "push_unchecked"
+path = "fuzz_targets/push_unchecked.rs"
+test = false
+doc = false
+bench = false
